2003-06-23  Dan Winship  <danw@ximian.com>

	* message-list.c (on_selection_changed_cmd): Save the idle_id

2003-06-23  Larry Ewing  <lewing@ximian.com>

	* folder-browser.c (do_message_selected): make sure not to strcmp
	a possibly NULL string.

2003-06-19  Not Zed  <NotZed@Ximian.com>

	** See bug #45063

	* folder-browser.c (do_message_selected): dont re-load if the same
	message gets selected again as one we've already shown.  Etree
	sends out selection changed events even when when it hasn't.

2003-06-18  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (hide_save_state): Only save state if we have a
	folder reference. Fixes some warnings about casting a NULL object
	to a CamelFolder.

2003-06-16  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (ml_tree_value_at): Don't display an unread icon
	for a parent message status if it has unread children but has been
	read itself. Instead, show that we have unread children by just
	making the message test bold (which it was already doing, so
	yay... this was easy). Fixes bug #42630.

2003-06-16  Not Zed  <NotZed@Ximian.com>

	** See bug #44609

	* mail-vfolder.c (vfolder_edit_rule): put the ok/cancel buttons in
	the stupid gnome 2 order.

	** See bug #33593

	* message-list.c (on_selection_changed_cmd): also listedn to
	selection changed events, since the etable api has changed.
	(get_selected_cb): helper for above.
	(message_list_construct): hook to selection change signal.

	* mail-callbacks.c (composer_send_queued_cb): Unref the composer
	to match the ref composer_send_cb();

	** See bug #44519

	* message-browser.c (message_browser_message_list_built): We want
	to disconnect from the messagelist, not folderbrowser signal.

2003-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (format_mime_part): We only really want to use
	mail_identify_mime_part() if the content-type is
	application/octet-stream - any other type (if it doesn't have a
	handler) should just force the user to save to disk.